2010-03-17  Dominique Dumont  <domi.dumont@free.fr>

	* lib/Config/Model/models/Itself/CommonElement.pl: add match
	parameter from Config::Model 0.645

2010-03-16  Dominique Dumont  <dominique.dumont@hp.com>

	* config-model-edit (): can use -force_load when loading data or
	yaml data.

2010-02-26  Dominique Dumont  <dominique.dumont@hp.com>  1.212

	* Build.PL: depend on Config::Model 0.643

2010-02-25  Dominique Dumont  <dominique.dumont@hp.com>

	* config-model-edit: added load_yaml option to load model from a
	YAML file.

2010-02-23  Dominique Dumont  <dominique.dumont@hp.com>

	* config-model-edit: added dump_yaml option to dump models as YAML
	file.

2010-02-02  Dominique Dumont  <dominique.dumont@hp.com>

	* config-model-edit: added -dump -dump_type -load options. Non
	options args are now interpreted as model modifications

2010-01-31  Dominique Dumont  <domi.dumont@free.fr>

	* lib/Config/Model/models/Itself/CommonElement.pl: warp out min and max

2009-06-24  Dominique Dumont  <domi.dumont@free.fr> v1.211

	* Build.PL: depend on Config::Model 0.637 and C::M::TkUI 1.210

2009-06-23  Dominique Dumont  <dominique.dumont@hp.com>

	* lib/Config/Model/models/Itself/*.pl: Changed built_in parameter
	to upstream_default and built_in_list to upstream_default_list

2009-05-30  Dominique Dumont  <dominique.dumont@hp.com>

	* config-model-edit: added -save option.

	* lib/Config/Model/models/Itself/Class.pl: Changed config_file
	parameter to file (Req by Config::Model 0.636)

2009-04-20  Dominique Dumont  <dominique.dumont@hp.com> v1.210

	* config-model-edit: Fixed Log::Log4perl default configuration

2009-04-12  Dominique Dumont  <domi.dumont@free.fr>

	* lib/Config/Model/models/Itself/Class.pl: Added auto_create and
	file parameter to read/write spec (Req by Config::Model
	0.635). Parameter allow_empty is deprecated and will be replaced
	by auto_create when you run config-edit-model

2009-04-03  Dominique Dumont  <dominique.dumont@hp.com>
