@@ -14,6 +14,7 @@ data/MasterModel/SshdWithAugeas.pl
 data/MasterModel/References.pl
 data/MasterModel/X_base_class.pl
 lib/Config/Model/Itself.pm
+lib/Config/Model/Itself/BackendDetector.pm
 lib/Config/Model/Itself/TkEditUI.pm
 lib/Config/Model/models/Itself/CargoElement.pl
 lib/Config/Model/models/Itself/CargoWarpRule.pl
@@ -30,6 +31,7 @@ lib/Config/Model/models/Itself/WarpRule.pl
 lib/Config/Model/models/Itself/WarpValue.pl
 lib/Config/Model/models/Itself/WarpableCargoElement.pl
 lib/Config/Model/models/Itself/WarpableElement.pl
+t/backend_detect.t
 t/dot_graph.t
 t/itself.t
 t/itself-editor.t
