@@ -1,3 +1,12 @@
+2010-03-25  Dominique Dumont  <dominique.dumont@hp.com>
+
+	* lib/Config/Model/Itself/BackendDetector.pm (): New class derived
+	from Config::Model::Value so config-model-edit can detect
+	available read/write plugin backend and propose relevant choice
+	for 'backend' model specification.
+
+	* Build.PL: Added dedendency on Pod::POM
+
 2010-03-17  Dominique Dumont  <domi.dumont@free.fr>
 
 	* lib/Config/Model/models/Itself/CommonElement.pl: add match
